--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
       </div>
       <div>
         <img src="./img/icones/rastreador.svg" alt="">
-        <h3>Rastreador</h3>
-        <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para
+        <h3 class="font-1-m cor-0">Rastreador</h3>
+        <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas
+          anti-furto para
           garantir o seu sossego. </p>
       </div>
     </div>
