--- a/bicicletas.html
+++ b/bicicletas.html
@@ -55,6 +55,7 @@
             <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
             <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
           </ul>
+          <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -75,6 +76,7 @@
             <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
             <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
           </ul>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -95,6 +97,7 @@
             <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
             <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
           </ul>
+          <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
         </div>
       </div>
     </div>
