--- a/contato.html
+++ b/contato.html
@@ -42,7 +42,7 @@
     <div class="contato container">
       <section class="contato-dados" aria-label="Endereço">
         <h2 class="font-1-m cor-0">Loja Online</h2>
-        <div class="contato-endereço font-2-s cor-4">
+        <div class="contato-endereco font-2-s cor-4">
           <p>Rua Ali Perto, 35</p>
           <p>Rio de Janeiro - RJ</p>
           <p>Brasil - Terra - Vita Láctea</p>
