--- a/orcamento.html
+++ b/orcamento.html
@@ -41,7 +41,7 @@
 
     <form class="orcamento container" action="./orcamento.html">
       <div class="orcamento-produto">
-        <h2 class="font-1-xs cor-5">Bikcraft ou Seguro</h2>
+        <h2 class="font-1-xs cor-5">Bikcraft ou Seguro?</h2>
 
         <input type="radio" name="tipo" value="bikcraft" id="bikcraft">
         <label for="bikcraft">Bikcraft</label>
@@ -51,12 +51,43 @@
 
         <div class="orcamento-conteudo" id="orcamento-bikcraft">
           <h2 class="font-1-xs cor-5">Escolha a sua</h2>
+
           <input type="radio" name="produto" value="nimbus" id="nimbus">
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          </div>
+
           <input type="radio" name="produto" value="magic" id="magic">
           <label for="magic">Magic Might <span>R$ 2499</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          </div>
+
           <input type="radio" name="produto" value="nebula" id="nebula">
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+          </div>
+
         </div>
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
