--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -8,7 +8,9 @@
   <title>Nebula | Bikcraft</title>
   <meta name="description" content="Nebula.">
 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../favicon.svg">
+  <link rel="preload" href="../css/style.min.css" as="style">
+  <link rel="stylesheet" href="../css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
