--- a/contato.html
+++ b/contato.html
@@ -76,13 +76,13 @@
           </div>
           <div class="col-2">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="contato@email.com">
+            <input type="email" id="email" name="email" placeholder="contato@email.com" required>
           </div>
           <div class="col-2">
             <label for="mensagem">Mensagem</label>
             <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
           </div>
-          <button class="botao col-2">Enviar Mensagem</button>
+          <button type="submit" class="botao col-2">Enviar Mensagem</button>
         </form>
       </section>
     </div>
@@ -155,6 +155,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/fomulario.js"></script>
 </body>
 
 </html>
