--- a/orcamento.html
+++ b/orcamento.html
@@ -120,7 +120,7 @@
         </div>
         <div class="col-2">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email">
+          <input type="email" id="email" name="email" required>
         </div>
         <h2 class="font-1-xs cor-9 col-2">entrega</h2>
         <div>
@@ -147,7 +147,7 @@
           <label for="estado">Estado</label>
           <input type="text" id="estado" name="estado">
         </div>
-        <button class="botao col-2">Solicitar Orçamento</button>
+        <button type="submit" class="botao col-2">Solicitar Orçamento</button>
       </div>
     </form>
   </main>
@@ -184,6 +184,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/fomulario.js"></script>
 </body>
 
 </html>
